<resources>
    <string name="app_name">MVVMcourseApp</string>
    <string name="registration_label" translatable="false">Регистрация</string>
    <string name="login_hint">Введите имя пользователя</string>
    <string name="email_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="button_reg">Создать аккаунт</string>
    <string name="auth_label">Войти</string>
    <string name="button_auth">Войти</string>
    <string name="reg_link">Зарегистрироваться</string>
    <string name="auth_link">Войти</string>
    <string name="button_Python">Python</string>
    <string name="button_Java">Java</string>
    <string name="button_JS">JavaScript</string>
    <string name="categories_tv">Языки программирования</string>
    <string name="registration_small_text">Введите ваши данные ниже</string>
    <string name="email_label">Email</string>
    <string name="login_label">Имя пользователя</string>
    <string name="pass_label">Пароль</string>
    <string name="auth_link_text">Уже есть аккаунт?</string>
    <string name="reg_link_text">Еще не зарегистрированы?</string>
    <string name="settings_icon">settings_icon</string>
    <string name="search_field">Найти</string>
    <string name="on_process">Категории</string>
    <string name="correctAnsCountCD">Correct Answers Count Image</string>
    <string name="answersCountDefaultText">0</string>
    <string name="button_quiz_to_menu">back to menu button</string>
    <string name="question_order">Вопрос %1$d/%2$d</string>
    <string name="practice_order">Задание %1$d/%2$d</string>
    <string name="ansCount">0%1$d</string>
    <string name="questionTextDefaultText">How many students in your class _from korea?</string>
    <string name="inPercent">%1$d%%</string>
    <string name="textViewSettings">Настройки</string>
    <string name="textViewPractice">Практические задания</string>
    <string name="textViewStatistics">Аналитика</string>
    <string name="analyticalPieChartAmount">Всего</string>
    <string-array name="analyticalPieChartColorArray">
        <item>#E480F4</item>
        <item>#6CC3F3</item>
        <item>#7167ED</item>
        <item>#D9455F</item>
        <item>#6054EA</item>
    </string-array>
    <string-array name="analyticalPieChartColorArray2">
        <item>#58D984</item>
        <item>#D9455F</item>
    </string-array>
    <string-array name="analyticalPieChartColorArray3">
        <item>#65ae07</item>
        <item>#dafd95</item>
        <item>#306400</item>
    </string-array>
    <string-array name="analyticalPieChartColorArray5">
        <item>#81BECE</item>
        <item>#E9E9E9</item>
        <item>#E38664</item>
        <item>#e4d6f8</item>
        <item>#5BA0BF</item>
        <item>#aaa2d8</item>
        <item>#a27eb8</item>
        <item>#ED413E</item>
        <item>#EFB786</item>
        <item>#604d9e</item>
    </string-array>
    <string-array name="analyticalPieChartColorArray6">
        <item>#DD2255</item>
        <item>#FC5F6A</item>
        <item>#E7242D</item>
        <item>#F3BFC3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>