<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:background="@color/backGroundGray">


    <ImageButton
        android:id="@+id/back_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/button_quiz_to_menu"
        android:background="@drawable/arrow_back"
        android:backgroundTint="@color/black" />

    <TextView
        android:id="@+id/auth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_ace_bold"
        android:layout_marginTop="90dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:textColor="@color/text"
        android:text="@string/auth_label"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_radius"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="40dp"
        android:paddingEnd="30dp">
        <TextView
            android:id="@+id/loginValidationFeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/error_background_modern"
            android:text="FEEDBACK"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_ace_medium"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:elevation="4dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_ace_medium"
            android:text="@string/login_label"
            android:textColor="@color/grayText"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFFFFF"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeColor="@color/lightGrayText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_ace_medium"
                android:hint="@string/login_hint"
                android:textSize="18sp"
                android:textColorHint="@color/hint_color"
                android:id="@+id/user_login_auth" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_ace_medium"
            android:text="@string/pass_label"
            android:textColor="@color/grayText"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFFFFF"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeColor="@color/lightGrayText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/lightGrayText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_pass_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_ace_medium"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_auth"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/montserrat_ace_medium"
            android:text="@string/button_auth"
            android:textSize="20sp"
            app:cornerRadius="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_ace_medium"
                android:text="@string/reg_link_text"
                android:textColor="@color/grayText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/link_to_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_ace_medium"
                android:text="@string/reg_link"
                android:textColor="@color/purple"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>