<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/menu_bubbles"
            android:orientation="vertical"
            android:paddingTop="50dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/montserrat_ace_medium"
                    android:gravity="start"
                    android:text="@string/auth_link"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
                <ImageButton
                    android:id="@+id/imb_statistics"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"
                    android:background="@drawable/analytics_24px"
                    android:contentDescription="@string/settings_icon" />
                <ImageButton
                    android:id="@+id/imb_settings"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/settings"
                    android:visibility="gone"
                    android:contentDescription="@string/settings_icon" />

            </LinearLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:src="@drawable/app_icon7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_radius"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:background="@drawable/search_background"
                android:drawableEnd="@drawable/search_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat_ace_medium"
                android:hint="@string/search_field"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences|textAutoCorrect"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grayText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_ace_medium"
                android:text="@string/categories_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lang_recycler_view_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_ace_medium"
                android:text="@string/on_process"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/process_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>